# umh-robotica-movil

./: CMakeLists.txt  README.md  package.xml
include/visual_odometry/: epnp.h  quaternion.h  visual_odometry.h
results/: dataset1_correction_groundtruth.txt  dataset1_correction_visualodometry.txt  dataset1_nocorrection_groundtruth.txt  dataset1_nocorrection_visualodometry.txt  dataset2_correction_groundtruth.txt  dataset2_correction_visualodometry.txt  dataset2_nocorrection_groundtruth.txt  dataset2_nocorrection_visualodometry.txt
scripts/: drawTrajectory.m
src/: callbacks.cpp  epnp.cpp  quaternion.cpp  visual_odometry.cpp
